src/objects/ADCVD_Objects__mdt.object
<CustomObject>
    <description>This holds the object types, record types, and a type field (if present) delineating a difference in records for the ADCVD app</description>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petition__c</fullName>
                    <default>true</default>
                    <label>Petition__c</label>
                </value>
                <value>
                    <fullName>Investigation__c</fullName>
                </value>
                <value>
                    <fullName>ADCVD_Order__c</fullName>
                </value>
                <value>
                    <fullName>Segment__c</fullName>
                </value>
                <value>
                    <fullName>Litigation__c</fullName>
                </value>
                <value>
                    <fullName>Related_Organization__c</fullName>
                </value>
                <value>
                    <fullName>Federal_Register__c</fullName>
                </value>
                <value>
                    <fullName>Recusal__c</fullName>
                </value>
                <value>
                    <fullName>Staffing_Assignment__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                    <default>true</default>
                    <label>AD</label>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
                <value>
                    <fullName>Administrative_Review</fullName>
                </value>
                <value>
                    <fullName>Anti_Circumvention_Review</fullName>
                </value>
                <value>
                    <fullName>Changed_Circumstances_Review</fullName>
                </value>
                <value>
                    <fullName>Expedited_Review</fullName>
                </value>
                <value>
                    <fullName>New_Shipper_Review</fullName>
                </value>
                <value>
                    <fullName>Scope_Inquiry</fullName>
                </value>
                <value>
                    <fullName>Sunset_Review</fullName>
                </value>
                <value>
                    <fullName>International_Litigation</fullName>
                </value>
                <value>
                    <fullName>Remand</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Review Opportunity Notice</fullName>
                </value>
                <value>
                    <fullName>Amended Final</fullName>
                </value>
                <value>
                    <fullName>Amended Preliminary</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Initiation/Prelim</fullName>
                </value>
                <value>
                    <fullName>ITC Final</fullName>
                </value>
                <value>
                    <fullName>ITC Preliminary</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Post Litigation</fullName>
                </value>
                <value>
                    <fullName>Postponement</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Quarterly Scope</fullName>
                </value>
                <value>
                    <fullName>Rescission</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                </value>
                <value>
                    <fullName>Revocation</fullName>
                </value>
                <value>
                    <fullName>Suspension Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ADCVD Objects</label>
    <pluralLabel>ADCVD Objects</pluralLabel>
</CustomObject>